--- a/modules/custom/quizz/templates/quizz-step-template.html.twig
+++ b/modules/custom/quizz/templates/quizz-step-template.html.twig
@@ -4,6 +4,6 @@
 {% endif %}
 <ul>
     {% for answer in quizz.answers %}
-        <li><a href="{{ path('quizz.save', {'question_id': quizz.question_id, 'answer_id': answer.pa_id}) }}">{{ answer.pa_name|e }}</a></li>
+        <li><a href="{{ path('quizz.save', {'question_id': quizz.question_id, 'answer_id': answer.qa_id}) }}">{{ answer.qa_name|e }}</a></li>
     {% endfor %}
 </ul>
