--- a/themes/films/assets/css/custom.css
+++ b/themes/films/assets/css/custom.css
@@ -180,6 +180,7 @@ ul.pager__items li a:hover {
 }
 
 /** VIEW LIST **/
+#block-quelquesinfos ul,
 #block-views-block-par-realisateur-block-1 ul,
 #block-quelquesinfos-2 ul,
 #block-films-testgender ul,
