hide bug report for small device

--- a/modules/custom/bug_report/css/bug_report.css
+++ b/modules/custom/bug_report/css/bug_report.css
@@ -40,3 +40,9 @@
 #bug-report-message {
   height:150px;
 }
+
+@media screen and (max-width: 600px) {
+  #block-bugreportblock {
+    display: none;
+  }
+}
